dppl/1.0/de.rst
.. _dppl_v1_de:

Digital Peer Publishing Lizenz (v1, de)
=======================================

HTML Version der Digital Peer Publishing Lizenz (Version 1, Deutsch)

Version 1.0 - Februar 2004

Copyright © 2004 Ministerium für Wissenschaft und Forschung des Landes
Nordrhein-Westfalen

Erstellt von Axel Metzger und Till Jaeger, Institut für Rechtfragen der
Freien und Open Source Software, https://www.ifross.de

Präambel
--------

Das Internet hat die Rahmenbedingungen wissenschaftlichen Arbeitens
tiefgreifend verändert. Dokumente sind in unüber­schaubarer Menge in
öffentlich zugänglichen Webangeboten verfügbar. Klassische
Wissenschaftsmedien, wie Fachjournals und Buchpublikationen, werden
durch elektro­nische Angebote ergänzt oder sogar ersetzt. Zugleich geben
Wissenschaftler Quellen aller Art in Datennetzen im Wege der
Individual­kommunikation weiter. Ein Prozess, der von den führenden
deutschen Forschungs­organi­sationen, mit der Berliner Erklärung
(https://openaccess.mpg.de/Berliner-Erklaerung)
ausdrücklich unterstützt wird.

Diese neuen Möglichkeiten der Kom­munikation gestatten eine dezentrale
Ver­breitung wissenschaftlicher Inhalte - schnell, transparent und
forschungsnah. Wissen­schaftler sind regelmäßig an der weiten,
qualitätsvollen Verbreitung ihrer Forschungs­ergebnisse interessiert.
Dabei ist es selbst­verständlich, dass die Leistungen des einzelnen
respektiert und beispielsweise durch Nennung des Autors anerkannt und
gesichert werden. Diesen Prozess fair, transparent und sicher für alle
Beteiligten zu gestalten, ist Ziel der Digital Peer Publishing Lizenz.

Die Digital Peer Publishing Lizenz bietet die lizenzrechtliche Grundlage
für eine entsprech­ende Verbreitung von Dokumenten in E-Journals. Die
Lizenz gestattet jedermann die Weitergabe des Dokuments in
elektronischer Form, :abbr:`z. B.(zum Beispiel)` es in Netzwerken öffentlich zur Verfügung zu
stellen.

Die Weitergabe durch andere ist allerdings an Pflichten geknüpft,
insbesondere im Hinblick auf die Nennung der Autoren und Rechts­inhaber
und die verwendeten bibliograph­ischen Angaben, um eine einheitliche
Zitier­weise zu gewährleisten. Ein Recht zur Nutzung veränderter
Versionen der Werke wird durch die Lizenz nicht eingeräumt.

Die Rechte für die Nutzung in körperlicher Form, insbesondere die Rechte
zur Ver­breitung in Druckform oder auf Trägermedien, verbleiben bei dem
Urheber oder sonstigen Rechtsinhaber und werden durch diese Lizenz nicht
erfasst. Dadurch wird zum einen die elektronische Verbreitung gefördert,
zum anderen besteht für den Rechtsinhaber die Möglichkeit, die Rechte
zum körperlichen Vertrieb von Werkexemplaren einem einzelnen
Berechtigten, etwa einem Verlag, einzu­räumen. Wer eine parallele
Verbreitung seiner Werke unter dieser Lizenz und in einem Verlag
wünscht, sollte darauf achten, dass er entweder das Werk zunächst unter
dieser Lizenz verbreitet, bevor er einen Verlagsvertrag unterzeichnet -
der Verlag erwirbt in diesem Fall entsprechend belastete Rechte - oder
aber bei der Unterzeichnung des Verlagsvertrags darauf achtet, dass er
nicht die ausschließlichen Rechte für die öffentliche Zugänglichmachung
an den Verlag überträgt, sondern allenfalls einfache Rechte.

Diese Lizenzbedingungen verstehen sich als Angebot an jedermann auf
Abschluss eines Lizenzvertrages dieses Inhaltes. Der Vertrag kommt
dadurch zustande, dass der Nutzer die Rechte aus dem Lizenzvertrag
wahrnimmt.

Als Lizenzgeber kommen entweder die Her­ausgeber von E-Journals in
Betracht, wenn sie Inhaber der ausschließlichen Nutzungsrechte an den
Beiträgen sind oder die Autoren selbst, sofern die Rechte an den
Beiträgen bei ihnen liegen. Der Lizenzvertrag ist für beide
Fall­gestaltungen in gleichem Maße geeignet.

Abschnitt 1: Definitionen
-------------------------

§ 1: Definitionen
~~~~~~~~~~~~~~~~~

In diesem Lizenzvertrag werden die nachfolgend definierten Begriffe
einheitlich verwendet:

(a) "Digitale Signatur": Daten in elektronischer Form, die dem Werk
beigefügt oder logisch mit ihm verknüpft sind und die zur
Authenti­fizierung des Urhebers oder Inhabers eines ausschließlichen
Nutzungsrechts dienen.

(b) "History": Informationen zu dem Werk, insbesondere zu den Urhebern,
zur Ent­stehungsgeschichte oder zu der Version des Werkes, die
unmittelbar in das Werk eingefügt oder ihm in einer eigenen Datei
beigefügt werden und die der Information des Nutzers dienen. Die History
kann auch Hinweise darauf enthalten, an welchem Ort der Urheber aktuelle
Versionen des Werks zur Verfügung stellt oder nachträgliche inhaltliche
Korrekturen aufführt.

(c) "Lizenzgeber": Der Inhaber des Urheber­rechts sowie seine
Rechtsnachfolger oder der Inhaber eines ausschließlichen Nutzungs­rechts
an dem Werk, die den Abschluss dieses Lizenzvertrages anbieten.

(d) "Metadaten": Maschinenlesbare, struktur­ierte Informationen über das
Werk, die in diesem enthalten sind und die der verein­fachten
maschinellen Auffindbarkeit des Werkes und/oder einer effizienten
Verwaltung von Datenbeständen dienen (:abbr:`:abbr:`z. B.(zum Beispiel)`(zum Beispiel)` "HTML-Metatags").

(e) "Metadatenmodell": Eine standardisierte Struktur für die Erfassung
von Metadaten mit definierten Elementen zur Ressourcen­beschreibung (z.
B. "Dublin Core Metadata Element Set").

(f) "Nutzung": Jede Verwendung des Werkes, für die urheberrechtlich eine
Erlaubnis des Urhebers oder des Inhabers eines aus­schließlichen
Nutzungsrechts erforderlich ist, :abbr:`z. B.(zum Beispiel)` die Weitergabe des Werkes oder
die Bereitstellung zum Download.

(g) "Offenes Dateiformat": Ein Dokumenten­format, das in einem für
jedermann frei einsehbaren Standard beschrieben ist und von jedermann
ohne Beschränkungen und lizenzgebührenfrei in einem Computer­programm
implementiert werden darf.

(h) "Sie": Der Lizenznehmer - jedermann, der diesen Lizenzvertrag
abschließt.

(i) "Veränderte Version": Jede Version des Werkes, in der Sie oder ein
Dritter Veränderungen vorgenommen haben, unab­hängig davon, ob die
Veränderungen selbst die Schwelle der urheberrechtlichen Schutz­fähigkeit
erreichen oder nicht. Ausgenommen sind die Fälle, in denen das Gesetz
eine zustimmungsfreie Veröffent­lichung und einen zustimmungsfreien
Vertrieb gestattet ("freie Benutzung").

(j) "Vervielfältigungsstück": Ein verkörpertes Werkexemplar, also das
Werk in gegen­ständlicher Form (:abbr:`z. B.(zum Beispiel)` als gedrucktes Buch oder auf
CD-ROM).

(k) "Werk": Das urheberrechtlich geschützte Werk, an dem Nutzungsrechte
durch diesen Lizenzvertrag eingeräumt werden.

Abschnitt 2: Nutzungsrechte
---------------------------

§ 2: Einräumung von Nutzungsrechten
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Die Einräumung der Nutzungsrechte durch diesen Lizenzvertrag erfolgt
lizenzgebühren­frei.

(2) Dieser Lizenzvertrag erlaubt Ihnen, zeitlich und räumlich
unbeschränkt das Werk in elektronischer Form zu vervielfältigen, Dritten
auf elektronischem Wege zu übermitteln und - insbesondere durch
Bereitstellung zum Download - öffentlich zugänglich zu machen.

(3) Dieser Lizenzvertrag berechtigt Sie ferner, das Werk in
elektronische Datenbanken oder sonstige Sammlungen aufzunehmen. Soweit
Sie dabei eigene Rechte an Datenbanken oder Sammelwerken erwerben,
dürfen Sie diese nicht dafür verwenden, die weitere Nutzung des Werkes
zu beschränken oder zu behindern.

(4) Dieser Lizenzvertrag will die Informations­versorgung im Internet
stärken. Deshalb sind die Nutzung in körperlicher Form, insbe­sondere die
Verbreitung von Druckwerken, sowie die Nutzung veränderter Versionen des
Werkes nicht gestattet.

(5) Dieser Lizenzvertrag berechtigt Sie, das Werk Dritten zugänglich zu
machen. Sie können Dritten aber keine Nutzungsrechte an dem Werk
einräumen.

Abschnitt 3: Nutzungsmodalitäten
--------------------------------

§ 3: Keine Pflicht zur Nutzung und zur unentgeltlichen Weitergabe
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Dieser Lizenzvertrag begründet für Sie keine Pflicht zur Nutzung.
Sie entscheiden, ob und wem Sie das Werk auf elektronischem Weg
übermitteln oder zur Verfügung stellen. Sie können das Werk daher ohne
weiteres auch in internen Netzen (Intranet) zur Verfügung stellen oder
lediglich einzelnen Personen auf elektronischem Wege über­mitteln.

(2) Dieser Lizenzvertrag verpflichtet Sie nicht, die Nutzung des Werkes
unentgeltlich durchzuführen. Für den Zugang zu dem Werk oder die
Verschaffung eines Verviel­fältigungsstücks durch die elektronische
Über­mittlung in einem Datennetz dürfen Sie mit dem Nutzer die Zahlung
eines Entgelts vereinbaren. Sie dürfen jedoch nicht die weitere Nutzung
durch den Erwerber von Gegenleistungen abhängig machen, da er die dafür
erforderlichen Nutzungsrechte nicht von Ihnen erhält, sondern vom
Lizenzgeber.

§ 4: Offener Zugang
~~~~~~~~~~~~~~~~~~~

(1) Wenn Sie das Werk nutzen, dürfen Sie die weitere Nutzung durch
Dritte nicht mittels technischer Schutzmaßnahmen, insbesondere durch den
Einsatz von Kopierschutz­vorrichtungen jeglicher Art, verhindern oder
erschweren. Eine passwortgeschützte Zugangsbeschränkung oder die Nutzung
in einem Intranet wird nicht als technische Schutzmaßnahme angesehen.

(2) Wenn Sie das Dokument in einem offenen Dateiformat erhalten haben,
dürfen Sie es nicht ohne vorherige ausdrückliche Zustim­mung des Urhebers
oder des Inhabers eines ausschließlichen Nutzungsrechts in einem
nicht-offenen Dateiformat nutzen. Die Zustim­mung soll erteilt werden,
wenn wegen des hohen Verbreitungsgrades des Dateiformats ein
verbesserter Zugang zu dem Werk zu erwarten ist und sich das Dateiformat
für die Präsentation des Werkes eignet.

§ 5: Nennung von Urhebern und Nutzungsrechtsinhabern
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Wenn Sie das Werk nutzen, müssen Sie die Namensnennung von Urhebern
- :abbr:`z. B.(zum Beispiel)` Urheber- oder Copyrightvermerke - in der vor­gefundenen Art und
Weise übernehmen. Gleiches gilt für die Nennung der Inhaber eines
ausschließlichen Nutzungsrechts, sofern diese im Zusammenhang mit dem
Werk genannt werden.

(2) Wird das Werk in ein umfassenderes Gesamtangebot eingebunden, etwa
in ein Sammelwerk oder eine Datenbank, müssen Sie die Nennung der
Urheber und der Inhaber eines ausschließlichen Nutzungsrechts in einer
angemessenen und für die Form der Nutzung üblichen Art und Weise
sicherstellen.

(3) Digitale Signaturen, die der Urheber oder der Inhaber eines
ausschließlichen Nutzungs­rechts dem Werk hinzugefügt hat und welche die
Echtheit oder Herkunft des Werkes bestätigen, dürfen Sie nicht
entfernen, es sei denn, dies ist erforderlich, um das Werk in ein
anderes - nach § 4 Abs. 2 zulässiges - Dateiformat zu konvertieren.

§ 6: Zitierung und Metadaten
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Um trotz der möglichen dezentralen elektronischen Nutzung eine
einheitliche Zitier­weise des Werkes und eine dauerhafte Auf­findbarkeit
des Dokuments für jedermann zu gewährleisten, dürfen Sie im Rahmen der
Nutzung des Werkes bibliographische Angaben zur Originalfundstelle weder
verändern noch entfernen. Sie dürfen aber zusätzliche bibliographische
Angaben hinzu­fügen.

(2) Metadaten, die der Urheber oder der Inhaber eines ausschließlichen
Nutzungs­rechts dem Werk hinzugefügt hat, dürfen Sie nicht entfernen, es
sei denn, dies ist erforderlich, um das Werk in ein offenes Dateiformat
konvertieren zu können.

(3) Metadaten, die der Urheber oder der Inhaber eines ausschließlichen
Nutzungs­rechts dem Werk hinzugefügt hat, dürfen an andere
Metadatenmodelle angepasst werden, wenn dies der erleichterten
Auffindbarkeit des Dokuments oder der Standardisierung von
Metadatenstrukturen dient.

§ 7: Mitlieferung weiterer Informationen
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Wenn Sie Nutzungshandlungen vor­nehmen, die Ihnen aufgrund dieses
Lizenz­vertrags gestattet sind, müssen Sie dem Werk stets diesen
Lizenztext in deutscher und englischer Sprache beifügen oder eine Quelle
angeben, unter der beide Lizenztexte auf elektronischem Weg dauerhaft
und in üblicher Weise abrufbar ist, bevorzugt durch Download aus dem
Internet.

(2) Hinweise auf diese Lizenz, die der Urheber oder der Inhaber eines
ausschließlichen Nutzungsrechts dem Werk hinzugefügt hat, dürfen Sie
weder verändern noch entfernen.

(3) Ist dem Werk eine History beigefügt, so dürfen Sie das Werk nur
gemeinsam mit der vollständigen und unveränderten History weitergeben.

Abschnitt 4: Abschluss und Beendigung dieses Vertrages; Vorbehalt Ihrer gesetzlichen Rechte
-------------------------------------------------------------------------------------------

§ 8: Vertragsschluss
~~~~~~~~~~~~~~~~~~~~

Dieser Lizenztext ist ein Angebot an Sie, das auf den Abschluss eines
Lizenzvertrages zu den in diesem Lizenzvertrag genannten Bedingungen
gerichtet ist. Sie können den Lizenzvertrag annehmen, indem Sie die in §
2 des Vertrages genannten Rechte ausüben. Die Annahmeerklärung muss dem
Lizenzgeber nicht zugehen.

§ 9: Heimfall der Nutzungsrechte
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Wenn Sie die in den §§ 2 Abs. 3 Satz 2 und 3-8 dieses Vertrages
genannten Verpflicht­ungen verletzen, entfallen automatisch Ihre durch
den Lizenzgeber mit diesem Vertrag eingeräumten Nutzungsrechte. Sie
dürfen das Werk dann nicht mehr nutzen.

(2) Die Nutzungsbefugnisse Dritter, die das Werk von Ihnen erworben
haben, werden durch einen Heimfall der Nutzungsrechte nicht berührt.

§ 10: Vorbehalt Ihrer gesetzlichen Rechte
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Gegenstand dieser Lizenz ist ausschließlich die Einräumung von
Nutzungsrechten, um das Werk der Öffentlichkeit oder einzelnen Personen
in elektronischer Form zugänglich zu machen. Nicht in den
Anwendungsbereich dieser Lizenz fallen diejenigen Befugnisse zur Nutzung
des Werkes, die sich aus den gesetzlichen Beschränkungen des
Urheber­rechts ergeben, etwa die Vervielfältigung zum privaten Gebrauch,
das Zitatrecht etc. Für die Wahrnehmung dieser Rechte bedarf es nicht
des Abschlusses dieses Lizenzvertrags.

Abschnitt 5: Haftung und Gewährleistung
---------------------------------------

§ 11: Haftung und Gewährleistung
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Die Haftung des Lizenzgebers Ihnen gegen­über beschränkt sich auf das
arglistige Ver­schweigen von Mängeln.

§ 12 Haftung bei Ansprüchen Dritter
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Werden die Vertragsparteien einzeln oder gemeinsam durch Dritte wegen
des Inhalts des Werkes auf Schadensersatz und/oder Kosten einer
Rechtsverfolgung in Anspruch genom­men, so haftet jede Partei im
Innenverhältnis entsprechend dem Anteil ihres eigenen Verschuldens. Der
Lizenznehmer haftet alleine, wenn der Lizenzgeber in dem Werk eine
Quelle angegeben hat, unter der er nachträgliche inhaltliche Korrekturen
aufführt, und diejenigen Inhalte, die den Gegenstand der Inanspruchnahme
durch Dritte bilden, unter dieser Quelle zum Zeitpunkt der
Verletzungshandlung bereits korrigiert oder gelöscht waren.

Abschnitt 6: Der Lizenzvertrag
------------------------------

§ 13 Verhältnis der beiden Versionen
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Dieser Lizenzvertrag ist in deutscher und englischer Sprache
abgefasst. Beide Fassungen sind gleich verbindlich. Es wird unterstellt,
dass die in dem Lizenzvertrag verwandten Begriffe in beiden Fassungen
die gleiche Bedeutung haben. Ergeben sich dennoch Unterschiede, so ist
die Bedeutung maßgeblich, welche die Fassungen unter Berücksichtigung
des Ziels und Zwecks des Lizenzvertrags am besten miteinander in
Einklang bringt.

(2) Das Ministerium für Wissenschaft und Forschung Nordrhein-Westfalen
kann mit verbindlicher Wirkung neue Versionen des Lizenzvertrags in
Kraft setzen, soweit dies erforderlich und zumutbar ist. Neue Versionen
des Lizenzvertrags werden auf der Internetseite des Ministeriums für
Wissenschaft und Forschung Nordrhein-Westfalen (URL) mit einer
eindeutigen Versionsnummer veröffentlicht. Die neue Version des
Lizenzvertrags erlangt für Sie verbindliche Wirkung, wenn Sie von deren
Veröffentlichung Kenntnis genommen haben. Gesetzliche Rechtsbehelfe
gegen die Änderung des Lizenzvertrags werden durch die vorstehenden
Bestimmungen nicht beschränkt.

(3) Sie dürfen diesen Lizenzvertrag in unveränderter Form
vervielfältigen, verbreiten und öffentlich zugänglich machen.

§ 14 Anwendbares Recht
~~~~~~~~~~~~~~~~~~~~~~

Auf diesen Lizenzvertrag findet deutsches Recht Anwendung.

Anhang
------

Um jedermann den Abschluss dieses Lizenzvertrages zu ermöglichen, wird
empfohlen, das Werk mit folgendem Hinweis auf den Lizenzvertrag zu
versehen:

    "Jedermann darf dieses Werk unter den Bedingungen der Digital Peer
    Publishing Lizenz (DPPL) [hier die Versionsnummer angeben, sofern eine
    Lizenzierung unter einer bestim­mten Version des Lizenzvertrags gewünscht
    ist] elektronisch über­mitteln und zum Download bereit­stellen. Der
    Lizenztext ist im `Internet <https://lizenzen.hbz-nrw.de/dppl/1.0/de>`__ abrufbar.